# RodroidRust-CLI

./: Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs  ui.rs
src/commands/: completions.rs  doctor.rs  list.rs  mod.rs  new.rs
src/template/: context.rs  metadata.rs  mod.rs  renderer.rs  source.rs
src/validation/: mod.rs  package.rs
templates/bottom-nav/: build.gradle.kts  settings.gradle.kts
templates/bottom-nav/app/: build.gradle.kts
templates/bottom-nav/app/src/main/: AndroidManifest.xml
templates/bottom-nav/app/src/main/java/__package_path__/: MainActivity.kt
templates/bottom-nav/app/src/main/jni/: Cargo.toml.template
templates/bottom-nav/app/src/main/jni/src/: lib.rs
templates/bottom-nav/gradle/wrapper/: gradle-wrapper.properties
templates/kmp-mobile/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
templates/kmp-mobile/androidApp/: build.gradle.kts  keystore.jks
templates/kmp-mobile/androidApp/src/main/kotlin/__package_path__/: MainActivity.kt
templates/kmp-mobile/androidApp/src/main/res/values/: strings.xml
templates/kmp-mobile/composeApp/: build.gradle.kts
templates/kmp-mobile/composeApp/src/androidMain/kotlin/__package_path__/: Platform.android.kt  RustBridge.android.kt
templates/kmp-mobile/composeApp/src/commonMain/kotlin/__package_path__/: App.kt  Greeting.kt  Platform.kt  RustBridge.kt
templates/kmp-mobile/composeApp/src/commonTest/kotlin/__package_path__/: ComposeAppCommonTest.kt
templates/kmp-mobile/composeApp/src/iosMain/kotlin/__package_path__/: MainViewController.kt  Platform.ios.kt  RustBridge.ios.kt
templates/kmp-mobile/composeApp/src/nativeInterop/cinterop/: rustios.def
templates/kmp-mobile/gradle/: libs.versions.toml
templates/kmp-mobile/iosApp/Configuration/: Config.xcconfig
templates/kmp-mobile/iosApp/iosApp.xcodeproj/: project.pbxproj
templates/kmp-mobile/rust/: Cargo.toml.template
templates/kmp-mobile/rust/android/: Cargo.toml.template
templates/kmp-mobile/rust/android/src/: lib.rs
templates/kmp-mobile/rust/core/: Cargo.toml.template
templates/kmp-mobile/rust/core/src/: lib.rs
templates/kmp-mobile/rust/ios/: Cargo.toml.template
templates/kmp-mobile/rust/ios/include/: rustios.h
templates/kmp-mobile/rust/ios/src/: lib.rs
templates/multi-module/app/: build.gradle.kts
templates/multi-module/app/src/main/java/__package_path__/: MainActivity.kt
templates/multi-module/app/src/main/jni/audio/: Cargo.toml.template
templates/multi-module/app/src/main/jni/core/: Cargo.toml  Cargo.toml.template
templates/multi-module/app/src/main/jni/network/: Cargo.toml.template
templates/multi-module/gradle/: libs.versions.toml
templates/standard/app/src/main/java/__package_path__/: MainActivity.kt
templates/standard/app/src/main/jni/: Cargo.toml.template
templates/standard/app/src/main/jni/src/: lib.rs
templates/standard/gradle/: libs.versions.toml
templates/standard/gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
