[package]
name = "android-rust-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI tool for generating Android Rust JNI templates in a single command"
license = "MIT OR Apache-2.0"
repository = "https://github.com"
readme = "README.md"
keywords = ["android", "rust", "jni", "cli", "template"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dialoguer = "0.12.0"
include_dir = "0.7.4"
minijinja = "2.14.0"
serde = { version = "1.0.228", features = ["derive"] }

[[bin]]
name = "android-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"] 
opt-level = 3
codegen-units = 1
strip = true
debug = false
overflow-checks = false
