[package]
name = "android-rust-cli"
version = "0.3.0"
edition = "2024"
authors = ["RodroidMods"]
description = "A CLI tool for generating Android Rust JNI templates in a single command"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rodroidmods/RodroidRust-CLI"
readme = "README.md"
keywords = ["android", "rust", "jni", "cli", "template"]
categories = ["development-tools", "command-line-utilities"]
include = ["src/**/*", "templates/**/*", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
console = "0.16.2"
dialoguer = "0.12"
include_dir = "0.7"
indicatif = "0.18.3"
minijinja = "2.14"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.9.11"

[[bin]]
name = "android-rust"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true
debug = false
overflow-checks = false
